blackbox-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  annotations:
    blackbox-exporter.amartha/enable: "true"
    blackbox-exporter.amartha/path: "/login.html"
    blackbox-exporter.amartha/host: "amartha.com"

spec:
  selector:
    app: blackbox-exporter
  type: NodePort
  ports:
    - port: 9115
      targetPort: 9115
      nodePort: 30500
