blackbox-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  annotations:
    blackbox-exporter/enable: "true"
    blackbox-exporter/path: "/login.html"

spec:
  selector:
    app: blackbox-exporter
  type: NodePort
  ports:
    - port: 9115
      targetPort: 9115
      nodePort: 30500
